--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .grid {
     display: grid;
     grid-template-columns: repeat(10, auto);
-    grid-template-rows: (20, auto);
+    grid-template-rows: repeat(20, auto);
     padding: 0.6vh;
     gap: 0.3vh;
     border-radius: 0.6vh;
@@ -32,4 +32,43 @@ body {
     width: var(--cell-size);
     border-radius: 0.3vh;
     background-color: rgba(126, 150, 221, 0.2);
+}
+
+.grid>div.I {
+    background-color: #6be1ec;
+}
+
+.grid>div.J {
+    background-color: #5eb0f3;
+}
+
+.grid>div.L {
+    background-color: #f2c35b;
+}
+
+.grid>div.O {
+    background-color: #f7e562;
+}
+
+.grid>div.S {
+    background-color: #6be1ec;
+}
+
+.grid>div.Z {
+    background-color: #de5c6b;
+}
+
+.grid>div.T {
+    background-color: #b276f3;
+}
+
+.grid>div.I,
+.grid>div.J,
+.grid>div.L,
+.grid>div.O,
+.grid>div.S,
+.grid>div.Z,
+.grid>div.T {
+    box-shadow: inset 2px 2px 2px rgba(255, 255, 255, 0.2),
+        inset -2px -2px 2px rgba(1, 8, 89, 0.2);
 }
